 * Fixed a bug in advance rename tool when utilizing METATAGS
New features:
 * Disk free space label is shown in status bar if device list isn't shown (works after restarting gcmd)
 * Shortcut can be assigned for:
   - Moving the cursor up or down ("Move cursor one step up/down")
   - Viewing bookmarks of current device ("Show bookmarks of current device")

===================================
gnome-commander 1.6.1
---------------

Bug fixes:
 * Fixed problem bgo#638174 (Selection background color not applied when using custom colors)
 * Fixed problem bgo#773063 (Compiles with gcc6 -Werror=format-security, Thanks to Mamoru Tasaka)

New or updated docs:
       cs (Marek Černocký)

===================================
gnome-commander 1.6.0
---------------

Bug fixes:
 * Fixed problem bgo#671616 (Right-Mouse popup menu is displayed in wrong position, Thanks to Puux)
 * Fixed problem bgo#683087 (Crash opening properties window on certain objects, Thanks to Puux)
 * Fixed problem bgo#742752 (Made options dialog resizable and added scrollbars)
 * Preserve focused file after renamed with AdvRenDialog (Thanks to Martin Mocko)
 * Fixed problem bgo#767158 (Shortcuts stop working after changing layout)
 * Fixed string escaping for directories with ampersand (see bgo#769309)
 * Fixed problem bgo#770062 (Memory leak in GnomeCmdPlainPath, Thanks to Eric)
 * Fixed problem bgo#770063 (Memory leak in get_string_pixel_size, Thanks to Eric)

New features:
 * Always reopen the tab which was previously closed in the options dialog
 * Samba support is now optionally available via configure option
 * Configurable command for sending files to a preferred application
 * Button 'Edit files' accepts more than one selected file at the same time
 * Device buttons and device list entries act as 'home buttons' for that device when it is already active
 * Copy directory path to clipboard after right click on dir-indicator (Thanks to Puux)